--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
             - '.:/var/www/html'
         networks:
             - sail
+            - proxy
         depends_on:
             - mysql
             - redis
@@ -103,6 +104,8 @@ services:
 networks:
     sail:
         driver: bridge
+    proxy:
+        external: true
 volumes:
     sail-mysql:
         driver: local
